<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeiXing</string>
    <string name="mainpagetwo">mainpagetwo</string>
    <string name="personalmainpage">personalmainpage</string>
    <string name="searchmainpage">searchmainpage</string>
    <string name="sharemainpage">sharemainpage</string>
    <string name="teammainpage">teammainpage</string>
    <string name="changenameandheadmap">changenameandheadmap</string>
    <string name="searchnamepage">searchnamepage</string>
    <string name="relationteam">relationteam</string>
    <string name="spot">spot</string>
    <string name="name">name</string>
    <string name="nametwo">nametwo</string>
    <string name="near">near</string>
    <string name="shopping">shopping</string>
    <string name="eating">eating</string>
    <string name="hotel">hotel</string>
    <string name="happy">happy</string>
    <string name="collect">happy</string>
    <string name="friends">happy</string>
    <string name="message">happy</string>
    <string name="personalblog">personalblog</string>
    <string name="collectblog">collectblog</string>
    <string name="friendblog">friendblog</string>
    <string name="friendblogandteam">friendblogandteam</string>
    <string name="friendblogandteamtwo">friendblogandteamtwo</string>
    <string name="createteam">createteam</string>
    <string name="addmember">addmember</string>
    <string name="iamcreater">iamcreater</string>
    <string name="iamnotcreater">iamnotcreater</string>
    <string name="iwascreater">iwascreater</string>
    <string name="iwasnotcreater">iwasnotcreater</string>
    <string name="checkmember">checkmember</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="newest">最新</string>
    <string name="hotest">最热</string>
    <string name="Mainpage">主页</string>
    <string name="Searchmainpage">发现</string>
	<string name="Sharemainpage">分享</string>
    <string name="Personalmainpage">个人</string>
	<string name="Teammainpage">组队</string>
	<string name="Spot">景点搜索</string>
	<string name="nickname">组队雷达</string>
	<string name="search">搜索</string>
	<string name="historysearch">历史搜索</string>
	<string name="hotsearch">热门搜索</string>
	<string name="inputimage">添加图片</string>
	<string name="shangchuan">上传</string>
	<string name="mineblogs">我的</string>
	<string name="theirblogs">收藏</string>
	<string name="Friends">好友</string>
	<string name="Message">消息</string>
	<string name="wochuangjiandeduiwu">我创建的队伍</string>
	<string name="wojiarudeduiwu">我加入的队伍</string>
	<string name="genghuantouxianghenichen">更换头像和昵称</string>
	<string name="queding">确定</string>
	<string name="quxiao">取消</string>
	<string name="map">地图</string>
	<string name="Relationteam">相关组队</string>
	<string name="relationshare">相关分享</string>
	<string name="Near">附近</string>
	<string name="back">返回</string>
	<string name="Createteam">创建队伍</string>
	<string name="team_now">现有组队:</string>
	<string name="bianmin">便民</string>
	<string name="Shopping">购物</string>
	<string name="Eating">餐饮</string>
	<string name="Hotel">住宿</string>
	<string name="Happy">娱乐</string>
	<string name="fuwu">服务</string>
	<string name="stores">商店</string>
	<string name="didian">地点</string>
	<string name="hoteling">旅店</string>
	<string name="Delete">删除</string>
	<string name="Pinglun">评论</string>
	<string name="Dianzan">赞</string>
	<string name="Shoucang">收藏</string>
	<string name="Xiangguan">相关</string>
	<string name="Blog">游记</string>
	<string name="Team">组队</string>
	<string name="chuangjianduiwu">创建队伍</string>
	<string name="Createsuccess">创建</string>
	<string name="zuixin">最新</string>
	<string name="zuire">最热</string>
	
</resources>