<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/findline"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" 
        android:background="@drawable/register_title_bar">

        <ImageView
            android:id="@+id/headpicture"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:src="@drawable/wangchengcheng" />

        <TextView
            android:id="@+id/Nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="王城程"
            android:textSize="25sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mine"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/anniu5"
            android:text="@string/mineblogs" />
        <Button
            android:id="@+id/collect"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/anniu5"
            android:text="@string/theirblogs" />
        <Button
            android:id="@+id/friends"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/anniu5"
            android:text="@string/Friends" />
        <Button
            android:id="@+id/message"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/anniu4"
            android:text="@string/Message" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="304dp"
        android:layout_weight="1.11"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/list15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false" 
            android:background="#ffffff"
            >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mainpage"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/anniu5"
            android:text="@string/Mainpage" />

        <Button
            android:id="@+id/searchmainpage"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/anniu5"
            android:text="@string/Searchmainpage" />

        <Button
            android:id="@+id/sharemainpage"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/anniu5"
            android:text="@string/Sharemainpage" />

        <Button
            android:id="@+id/personalmainpage"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/anniu4"
            android:text="@string/Personalmainpage" />

    </LinearLayout>

</LinearLayout>